--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,6 +90,7 @@
             android:text="Don't Remember Password? Recovery It" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="LOGIN"
@@ -99,5 +100,13 @@
             android:textStyle="bold"
             android:layout_marginTop="32dp"
             android:background="@drawable/button_background"/>
+        <ProgressBar
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:id="@+id/progress_bar"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:layout_marginTop="32dp"/>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
